Modify Text Styles

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <h3>H1: Main page heading</h3>
         <ul>
           <li>Font weight: 700 (bold)</li>
-          <li>Font size: 26px</li>
-          <li>Font-Family: Avro Regular</li>
+          <li>Font size: 44px</li>
+          <li>Font-Family: 'Avro', Serif; </li>
         </ul>
       </div>
 
@@ -66,8 +66,8 @@
         <h3>H2: Subheading</h3>
         <ul>
           <li>Font weight: 500</li>
-          <li>Font size: 18px</li>
-          <li>Font-family: Lato Regular</li>
+          <li>Font size: 26px</li>
+          <li>Font-family: 'Lato', Sans-serif;</li>
         </ul>
       </div>
 
@@ -75,8 +75,8 @@
         <h3>P: Paragraph text</h3>
         <ul>
           <li>Font weight: 400</li>
-          <li>font size: 14px</li>
-          <li>Font-family: Lato Regular</li>
+          <li>font size: 16px</li>
+          <li>Font-family: 'Lato', Sans-serif;</li>
         </ul>
       </div>
 
