Begin to add CSS styling

--- a/index.html
+++ b/index.html
@@ -16,43 +16,45 @@
   <main>
     <section class="colors">
       <h2>Colors</h2>
-      <div class="color-box blue-green">
-        <p>Blue-green</p>
-        <p>#A5DCE4</p>
+      <div class="color-box skyblue">
+        <p>Skyblue</p>
+        <p>#479AD1</p>
         <p>Parent Background Color</p>
       </div>
-      <div class="color-box dark-gray">
-        <p>Dark-Grey</p>
-        <p>#EAEBEB</p>
+      <div class="color-box marine-blue">
+        <p>Marine Blue</p>
+        <p>#2C365E</p>
         <p>Background</p>
       </div>
-      <div class="color-box marine-blue">
-        <p>Marine-Blue</p>
-        <p>#181E34</p>
+      <div class="color-box purple-pink">
+        <p>Purple-pink</p>
+        <p>#C9A2D2</p>
         <p>Accents</p>
       </div>
-      <div class="color-box olive-green">
-        <p>Olive-Green</p>
-        <p>#398557</p>
+      <div class="color-box darkgray">
+        <p>Darkgray</p>
+        <p>#36393A</p>
         <p>Border</p>
       </div>
-    </section class="fonts">
+    </section>
+     
+    <section class="fonts">
       <h2>Fonts</h2>
-      <div>
-        <h3>Avro Regular</h3>
-        <p class="avro-normal">The quick brown fox jumps over the lazy dog.</p>
-        <p class="avro-bold">The quick brown fox jumps over the lazy dog.</p>
-        <p class="avro-em">The quick brown fox jumps over the lazy dog.</p>
-      </div>
-      <div>
-        <h3>Lato Regular</h3>
-        <p class="lato-normal">The quick brown fox jumps over the lazy dog.</p>
-        <p class="lato-bold">The quick brown fox jumps over the lazy dog.</p>
-        <p class="lato-em">The quick brown fox jumps over the lazy dog.</p>
-      </div>
+        <div class="avro">
+          <h3>Avro Regular</h3>
+          <p class="avro-normal">The quick brown fox jumps over the lazy dog.</p>
+          <p class="avro-bold">The quick brown fox jumps over the lazy dog.</p>
+          <p class="avro-em">The quick brown fox jumps over the lazy dog.</p>
+        </div>
+        <div class="lato">
+          <h3>Lato Regular</h3>
+          <p class="lato-normal">The quick brown fox jumps over the lazy dog.</p>
+          <p class="lato-bold">The quick brown fox jumps over the lazy dog.</p>
+          <p class="lato-em">The quick brown fox jumps over the lazy dog.</p>
+        </div>
+    </section>
 
     <section class="text-styles">
-
       <h2>Text Styles</h2>
       <div>
         <h3>H1: Main page heading</h3>
