--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="text-styles">
       <h2>Text Styles</h2>
       <div>
-        <h3>H1: Main page heading</h3>
+        <h1>H1: Main page heading</h1>
         <ul>
           <li>Font weight: 700 (bold)</li>
           <li>Font size: 44px</li>
@@ -66,7 +66,7 @@
       </div>
 
       <div>
-        <h3>H2: Subheading</h3>
+        <h2>H2: Subheading</h2>
         <ul>
           <li>Font weight: 500</li>
           <li>Font size: 26px</li>
@@ -75,7 +75,7 @@
       </div>
 
       <div>
-        <h3>P: Paragraph text</h3>
+        <p>P: Paragraph text</p>
         <ul>
           <li>Font weight: 400</li>
           <li>font size: 16px</li>
