Change css to more responsive design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   
   <main>
-    <section class="colors">
+    <section id="colors" class="container">
       <h2>Colors</h2>
       <div class="color-box skyblue">
         <p>Skyblue</p>
@@ -38,15 +38,15 @@
       </div>
     </section>
      
-    <section class="fonts">
+    <section id="fonts" class="container">
       <h2>Fonts</h2>
-        <div class="avro">
+        <div class="avro inline-bloc">
           <h3>Avro Regular</h3>
           <p class="avro-normal">The quick brown fox jumps over the lazy dog.</p>
           <p class="avro-bold">The quick brown fox jumps over the lazy dog.</p>
           <p class="avro-em">The quick brown fox jumps over the lazy dog.</p>
         </div>
-        <div class="lato">
+        <div class="lato inline-bloc">
           <h3>Lato Regular</h3>
           <p class="lato-normal">The quick brown fox jumps over the lazy dog.</p>
           <p class="lato-bold">The quick brown fox jumps over the lazy dog.</p>
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <section class="text-styles">
+    <section id="text-styles" class="container">
       <h2>Text Styles</h2>
       <div>
         <h3 class="h1-main-heading">H1: Main page heading</h3>
